welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: missing arguments for method aaaa in class lastDigit;
follow this method with `_' if you want to treat it as a partially applied function
          if (aaaa == 1){
              ^